# Scene-Renderer

./: .gitignore  BVH.cpp  BVH.h  CMakeLists.txt  Component.cpp  Component.h  Demo.sln  Demo.vcxproj  Demo.vcxproj.filters  GUI.h  Material.cpp  Material.h  Object.cpp  Object.h  PTCamera.cpp  PTCamera.h  PTMaterial.cpp  PTMaterial.h  PTRay.cpp  PTRay.h  PTVec.cpp  PTVec.h  PTrandom.h  PathTracing.cpp  PathTracing.h  README.md  RenderManager.cpp  RenderManager.h  Shader.cpp  Terrain.cpp  Terrain.h  Utils.cpp  config.json  global.h  hittable.cpp  hittable.h  imgui.ini  main.cpp  mysql.session.sql  out.ppm  (+3 more)
asset/: compress.js  convert.py  objects.rar  package-lock.json  package.json  zipTex.py
asset/objects/: backpack.json  scene.json  scene_.json  scene__.json  sphere.json  sphere2.json
doc/: doc.md  progress.md
include/: GUI.h
include/PT/: BVH.h  Connector.h  PTAABB.h  PTCamera.h  PTHeader.h  PTMaterial.h  PTRay.h  PTRenderer.h  PTScene.h  PTTexture.h  PTVec.h  PathTracing.h  Renderer.h  glm_vec3.h  hittable.h  onb.h  pdf.h
include/buffer/: FrameBuffer.h  ImageTexture.h  PBO.h  RenderBuffer.h  SSBO.h  UniformBuffer.h  buffer.h
include/component/: Atmosphere.h  Cloud.h  Component.h  Grass.h  Lights.h  Mesh_Filter.h  Model.h  (+4 more)
lib/: IrrXML_release.lib  IrrXMLd.lib  assimp-vc143-mt.exp  assimp-vc143-mt.lib
shader/: hdr.fs  hdr.vs  light.fs  pbr.fs  skybox.fs  skybox.vs  terrain.fs  terrain.tese  terrain.vs  test.fs  test.vs
src/: Camera.h  GUI.h  Utils.h  glad.c  glad_.c  imgui.ini  main.cpp  test.cpp
test/: test.cpp  test.vcxproj
utils/: AABB.cpp  AABB.h
(+411 files in other folders)
